fix some layout issues

--- a/Frontend/src/components/LeftSideBar/style.css
+++ b/Frontend/src/components/LeftSideBar/style.css
@@ -85,3 +85,7 @@
 .fa-pen-nib{
     color: rgb(146, 60, 3)
 }
+
+a {
+    text-decoration: none;
+}
